Refactor: Continuing effort to cleardown non-assertj tests. Adding MockMvcIntegrationTest to exclusions due to JSON assert being caught. Fix: Fixing broken test uncovered in CourtDataDTOBuilderTest due to fixing asserts.