@@ -1,6 +1,6 @@
 package gov.uk.courtdata.integration.wqhearing;
 
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 
 import gov.uk.MAATCourtDataApplication;
@@ -32,17 +32,20 @@ class WQHearingControllerIntegrationTest extends MockMvcIntegrationTest {
 
     @Test
     void givenAInvalidParameter_whenFindByMaatIdAndHearingUUIDIsInvoked_thenEmptyRecordsIsReturned() throws Exception {
-        assertTrue(runSuccessScenario(List.of(), get(ENDPOINT_URL + INVALID_OFFENCE_ID + "/maatId/" + INVALID_REP_ID)));
+        assertThat(runSuccessScenario(List.of(), get(ENDPOINT_URL + INVALID_OFFENCE_ID + "/maatId/" + INVALID_REP_ID)))
+                .isTrue();
     }
 
     @Test
     void givenAValidParameter_whenFindByMaatIdAndHearingUUIDIsInvoked_thenWQLinkRegisterIsReturned() throws Exception {
         List<WQHearingEntity> wqHearingEntityList = List.of(TestEntityDataBuilder.getWQHearingEntity(8064716));
         WQHearingEntity wqHearing = repos.wqHearing.getReferenceById(8064716);
-        wqHearingEntityList.get(0).setCreatedDateTime(wqHearing.getCreatedDateTime());
-        wqHearingEntityList.get(0).setUpdatedDateTime(wqHearing.getUpdatedDateTime());
-        assertTrue(runSuccessScenario(
-                wqHearingEntityList,
-                get(ENDPOINT_URL + TestModelDataBuilder.TEST_OFFENCE_ID + "/maatId/" + TestModelDataBuilder.REP_ID)));
+        wqHearingEntityList.getFirst().setCreatedDateTime(wqHearing.getCreatedDateTime());
+        wqHearingEntityList.getFirst().setUpdatedDateTime(wqHearing.getUpdatedDateTime());
+        assertThat(runSuccessScenario(
+                        wqHearingEntityList,
+                        get(ENDPOINT_URL + TestModelDataBuilder.TEST_OFFENCE_ID + "/maatId/"
+                                + TestModelDataBuilder.REP_ID)))
+                .isTrue();
     }
 }
